resources/res.css
html, body {height: 100%; line-height: 1.8; background-color: #FFF;}
body {margin: 0;}
body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif;}
a:hover {color:white; background-color: #444; opacity: .5;}
img {object-fit: cover; max-height: 100%;}

.bgWhite {background-color: white;}
.bgLightGray {background-color: #AAA;}

.height-80 {height: 80px;}
.height-2000 {height: 2000px;}
.height-400 {height: 300px;}
.heightFull {height: 100%;}
.height90 {height: 95%;}
.height80 {height: 80%;}
.height75 {height: 75%;}
.height65 {height: 65%;}
.height50 {height: 50%;}
.height45 {height: 45%;}
.height40 {height: 40%;}
.height38 {height: 38%;}
.height30 {height: 30%;}
.height20 {height: 20%;}

.widthFull {width: 100%;}
.maxWidth1200 {max-width: 1200px;}
.maxWidth900 {max-width: 1100px;}
.maxWidth500 {max-width: 500px;}
.minWidth300 {min-width: 250px;}
.width-500 {width: 500px;}
.width40 {width: 49%; min-width: 500px;}

.displayInblock {display: inline-block;}
.boxLeft {position: relative; float: left;}
.boxRight {position: relative; float: right;}
.boxCenter {position: absolute; left: 0; top: 50%; width: 100%; text-align: center; margin: 0 auto;}
.boxCenter2 {position: absolute; left: 0; top: 40%; width: 100%; text-align: center; margin: 0 auto;}
.hwCenter {text-align: center; top: 50%; text-decoration: none;}
.floatLeft {float: left;}
.floatRight {float: right;}
.attachTop {top: 0;}
.positionFix {position: fixed;}

.marginHide {margin: 0; padding: 0;}
.marginAuto {margin: auto;}
.marginTop100 {margin-top: 45px!important;}
.marginTop20 {margin-top: 20px!important;}
.paddingXL {padding: 5px 20px;}
.paddingLG {padding: 5px 12px;}
.paddingMD {padding: 5px 6px;}
.bordertext {border: 5px solid;}
.zIndexTop {z-index: 5;}
.zIndexBot {z-index: 1;}
.zIndexMid {z-index: 3;}

.centerText {text-align: center;}
.letSpacingXL {letter-spacing: 10px;}
.letSpacingLG {letter-spacing: 6px;}
.letSpacingMD {letter-spacing: 2px;}
.fontsizeXL {font-size: 36px;}
.fontsizeLG {font-size: 28px;}
.fcWhite {color: white;}
.fcLightGray {color: #CCC;}
.whiteOnGray {background-color: rgba(20,20,20,.75); color: white; overflow: auto;}
.bgGray {background-color: rgba(20,20,20,.7)!important;}
.bgDarkGray {background-color: #555;}
.noDecor {text-decoration: none;}

.bgFade {
  opacity: .70;
}

.boxShadow {box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)}
.container {
  position: relative;
  border-color: red;
  border-style: solid;
  border: 3px;
}

.floatingContainer {
  position: relative;
  float: left;
  width: 46.66%;
  padding: 0px;
  margin: 0 10px 0 0;
  border-color: red;
  border-style: solid;
  border: 1px;
}
.floatingContainer2 {
  position: relative;
  float: left;
  width: 46.66%;
  padding: 0px;
  margin: 0 0 0 10px;
}

.navbarItem {
  padding: 8px 16px;
  width: auto;
  background-color: white;
  border: none;
  display: block;
  outline: 0;
}
.button {
  border: none;
  display: inline-block;
  padding: 8px 16px;
  vertical-align: middle;
  overflow: hidden;
  text-decoration: none;
  color: inherit;
  background-color: inherit;
  text-align: center;
  cursor: pointer;
  white-space: nowrap;
}

.row:after {
  content: "";
  display: table;
  clear: both;
}
.blankSpace {
  width: 100%;
  height: 30px;
}
@media only screen and (max-width: 1250px) {
  .button {
    padding: 5px 8px;
  }
  .floatingContainer {
    width: 100%;
    margin: 0 0 10px 0;
    padding: 0;
  }
  .floatingContainer2 {
    width: 100%;
    margin: 10px 0 0 0;
    padding: 0;
  }
  .height20 {
    height: 40%;
  }
}

